--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
 "ConnectionStrings": {
   "DefaultConnection":"server=DESKTOP-DT79GMV\\SQLEXPRESS;database=gymdb;trusted_connection=true;TrustServerCertificate=True"
 },
-
+"TokenKey" :"super secret key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
